fix: Improve ClassPool DI container stability and replace busy-wait loops with timed blocking